# CommunicationModel

./: .gitignore
Axis2/: CMakeLists.txt
Axis2/Axis/: CMakeLists.txt
Axis2/Axis/Client/: Axis2Client.sln  Axis2Client.vcxproj  Axis2Service.c  CMakeLists.txt
Axis2/Axis/REST_Client/: CMakeLists.txt  REST_Client.c  REST_Service  rest_client_util.c
Axis2/Axis/REST_Service/: CMakeLists.txt  Makefile.in
Axis2/Axis/Service/: Axis2Service.sln  Axis2Service.vcxproj  Axis2Service_svc.c  jansson.lib
Axis2/axis2c-bin-1.6.0-linux/: INSTALL
Axis2/axis2c-bin-1.6.0-linux/include/axis2-1.6.0/: config.h
Axis2/axis2c-bin-1.6.0-linux/lib/: libaxis2_axiom.so.0.6.0  libaxis2_engine.so.0  libaxis2_engine.so.0.6.0  libaxis2_http_common.so.0.6.0  libaxis2_http_receiver.so.0.6.0  libaxis2_http_sender.so.0.6.0  libaxis2_minizip.so.0.6.0  libaxis2_parser.so.0.6.0  libaxis2_xpath.so.0  libaxis2_xpath.so.0.6.0  libaxutil.so.0.6.0  libguththila.so.0  libguththila.so.0.6.0  libmod_axis2.so.0  libmod_axis2.so.0.6.0  libneethi.so.0  libneethi.so.0.6.0
Axis2/axis2c-bin-1.6.0-linux/modules/addressing/: libaxis2_mod_addr.so.0.6.0
Axis2/axis2c-bin-1.6.0-linux/modules/logging/: libaxis2_mod_log.so.0.6.0
Axis2/axis2c-bin-1.6.0-linux/samples/lib/mtom_caching_callback/: libmtom_caching_callback.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/samples/lib/mtom_sending_callback/: libmtom_sending_callback.so.0  libmtom_sending_callback.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/samples/src/: Makefile.in  NEWS  configure
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/amqp/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/echo/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/google/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/math/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/mtom/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/mtom_callback/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/notify/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/client/version/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/mtom_caching_callback/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/mtom_sending_callback/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/server/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/samples/src/user_guide/: Makefile.in
Axis2/axis2c-bin-1.6.0-linux/services/Axis2Service/: services.xml
Axis2/axis2c-bin-1.6.0-linux/services/Calculator/: libCalculator.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/echo/: libecho.so.0.0.0  services.xml
Axis2/axis2c-bin-1.6.0-linux/services/math/: libmath.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/mtom/: libmtom.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/mtom_callback/: libmtom_callback.so.0  libmtom_callback.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/notify/: libnotify.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/sg_math/: libadd.so.0.0.0  libdiv.so.0.0.0  libmul.so.0.0.0  libsub.so.0.0.0
Axis2/axis2c-bin-1.6.0-linux/services/version/: libversion.so.0.0.0
Axis2/axis2c-bin-1.6.0-win32/: NEWS
Axis2/axis2c-bin-1.6.0-win32/include/: Makefile.in
Axis2/axis2c-bin-1.6.0-win32/lib/: axiom.exp  axiom.lib  axis2_engine.exp  axis2_engine.lib  axis2_http_receiver.exp  axis2_http_receiver.lib  axis2_http_sender.exp  axis2_http_sender.lib  axis2_parser.exp  axis2_parser.lib  axis2_tcp_receiver.exp  axis2_tcp_receiver.lib  axis2_tcp_sender.exp  axis2_tcp_sender.lib  axis2_xpath.exp  axis2_xpath.lib  axutil.exp  axutil.lib  guththila.exp  guththila.lib  mod_axis2.exp  mod_axis2.lib  mod_axis2_IIS.exp  mod_axis2_IIS.lib  neethi.exp  neethi.lib
Axis2/axis2c-bin-1.6.0-win32/modules/addressing/: axis2_mod_addr.exp  axis2_mod_addr.lib
Axis2/axis2c-bin-1.6.0-win32/modules/logging/: axis2_mod_log.exp  axis2_mod_log.lib
Axis2/axis2c-bin-1.6.0-win32/services/Axis2Service/: services.xml
Axis2/axis2c-bin-1.6.0-win32/services/Calculator/: Calculator.exp  Calculator.lib
Axis2/axis2c-bin-1.6.0-win32/services/echo/: echo.exp  echo.lib
Axis2/axis2c-bin-1.6.0-win32/services/math/: math.exp  math.lib
Axis2/axis2c-bin-1.6.0-win32/services/mtom/: mtom.exp  mtom.lib
Axis2/axis2c-bin-1.6.0-win32/services/mtom_callback/: mtom_callback.exp  mtom_callback.lib
Axis2/axis2c-bin-1.6.0-win32/services/notify/: notify.exp  notify.lib
Axis2/axis2c-bin-1.6.0-win32/services/sg_math/: add.exp  add.lib  div.exp  div.lib  mul.exp  mul.lib  sub.exp  sub.lib
Axis2/jansson-2.7/: CMakeCache.txt  CTestTestfile.cmake  JanssonConfig.cmake  JanssonTargets.cmake  Makefile  cmake_install.cmake  config.status  libtool
Axis2/jansson-2.7/doc/: Makefile
Axis2/jansson-2.7/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  jansson.sln  jansson.vcxproj  jansson.vcxproj.filters
Axis2/jansson-2.7/src/.libs/: libjansson.so.4.7.0
Axis2/jansson-2.7/test/: Makefile
Axis2/jansson-2.7/test/suites/: Makefile
Axis2/jansson-2.7/test/suites/api/: Makefile
CommunicatioinModel/: CMakeLists.txt  api.json
CommunicatioinModel/src/: CMakeLists.txt
CommunicatioinModel/src/applications/: CMakeLists.txt
CommunicatioinModel/src/applications/CMClient/: CMClient.properties  CMakeLists.txt
CommunicatioinModel/src/applications/CMClient/src/: CMClient.cpp  RESTClient.cpp  structure.json
CommunicatioinModel/src/applications/CMServer/: CMServer.properties  CMakeLists.txt
CommunicatioinModel/src/applications/CMServer/src/: CMServer.cpp  ExistingApi.cpp  ExistingApi.h  NCConsole.xml  RESTServer.cpp  ncconsolestorage.cpp  ncconsolestorage.hpp
CommunicatioinModel/src/applications/HTTPSTimeServer/: CMakeLists.txt
CommunicatioinModel/src/litesql/: CMakeLists.txt  litesql
CommunicatioinModel/src/litesql/src/generator/: CMakeLists.txt
CommunicatioinModel/src/poco/: .gitignore  CMakeLists.txt
CommunicatioinModel/src/poco/Net/: CMakeLists.txt
CommunicatioinModel/src/poco/Net/samples/: CMakeLists.txt
CommunicatioinModel/src/poco/cmake/: DefinePlatformSpecifc.cmake
(+24 files in other folders)
